[package]
name = "rfc-4226"
version = "0.2.0"
authors = ["Alex Hamilton"]
edition = "2018"
description = "Implementation of IETF RFC 4226 (HOTP)."
homepage = "https://github.com/Aehmlo/rfc-4226"
keywords = ["hotp"]
categories = ["algorithms", "authentication"]
license = "MIT OR Apache-2.0"

[dependencies.ring]
version = "0.16.20"
default-features = false
